lume/LumeEngine/test/unittest/assets/test_data/image/ktx-test/ktx/valid/composition/array_2_elements_cubemap_6_faces.ktx
# This file was originally tracked by Git LFS but LFS tracking has been removed
version https://git-lfs.github.com/spec/v1
oid sha256:5dcf74f4f89a2fcae7daf2cef8b88de55825525f0742313f5462e4e642fc8c2d
size 196748
